index.html modified on feature2 branch

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Content</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita repudiandae error architecto quibusdam hic aut et aliquid ipsa, ea tenetur adipisci molestias totam a perspiciatis ex ratione, qui quaerat numquam similique eveniet saepe repellat? Excepturi, consectetur eveniet mollitia possimus corporis aspernatur delectus saepe, illum provident optio ipsam in quos libero, quae pariatur quo velit.</p>
+
+    <h2>This is new repo</h2>
+    <p>Author - Mrudul</p>
+    <p>Lorem, ipsum dolor.</p>
 </body>
 </html>
